--- a/example/user_defined_eos.ipynb
+++ b/example/user_defined_eos.ipynb
@@ -1240,9 +1240,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "feos",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "feos"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
