--- a/example/user_defined_eos.ipynb
+++ b/example/user_defined_eos.ipynb
@@ -446,7 +446,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_69867/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_81996/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
       "  return n * (np.log(v / (v - b * n)) - ak_mix / (b * SQRT2 * 2.0 * state.temperature)\n"
      ]
     },
@@ -576,9 +576,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_69867/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_81996/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
       "  return n * (np.log(v / (v - b * n)) - ak_mix / (b * SQRT2 * 2.0 * state.temperature)\n",
-      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_69867/2221081275.py:66: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_81996/2221081275.py:66: RuntimeWarning: invalid value encountered in log\n",
       "  * np.log((v * (SQRT2 - 1.0) + b * n) / (v * (SQRT2 + 1.0) - b * n)))\n"
      ]
     }
@@ -611,9 +611,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_69867/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_81996/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
       "  return n * (np.log(v / (v - b * n)) - ak_mix / (b * SQRT2 * 2.0 * state.temperature)\n",
-      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_69867/2221081275.py:66: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_81996/2221081275.py:66: RuntimeWarning: invalid value encountered in log\n",
       "  * np.log((v * (SQRT2 - 1.0) + b * n) / (v * (SQRT2 + 1.0) - b * n)))\n"
      ]
     }
@@ -729,97 +729,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>molar enthalpy vapor</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>molar entropy vapor</th>\n",
+       "      <th>molar entropy liquid</th>\n",
+       "      <th>density vapor</th>\n",
        "      <th>molar enthalpy liquid</th>\n",
        "      <th>pressure</th>\n",
        "      <th>density liquid</th>\n",
-       "      <th>density vapor</th>\n",
-       "      <th>molar enthalpy vapor</th>\n",
-       "      <th>molar entropy liquid</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>molar entropy vapor</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>21.774512</td>\n",
+       "      <td>250.000000</td>\n",
+       "      <td>0.112747</td>\n",
+       "      <td>0.041205</td>\n",
+       "      <td>110.874504</td>\n",
        "      <td>3.888854</td>\n",
        "      <td>216751.867612</td>\n",
        "      <td>13517.744128</td>\n",
-       "      <td>110.874504</td>\n",
-       "      <td>21.774512</td>\n",
-       "      <td>0.041205</td>\n",
-       "      <td>250.000000</td>\n",
-       "      <td>0.112747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>21.769636</td>\n",
+       "      <td>250.240382</td>\n",
+       "      <td>0.112659</td>\n",
+       "      <td>0.041231</td>\n",
+       "      <td>111.801129</td>\n",
        "      <td>3.895457</td>\n",
        "      <td>218680.955365</td>\n",
        "      <td>13509.916346</td>\n",
-       "      <td>111.801129</td>\n",
-       "      <td>21.769636</td>\n",
-       "      <td>0.041231</td>\n",
-       "      <td>250.240382</td>\n",
-       "      <td>0.112659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>21.764747</td>\n",
+       "      <td>250.480764</td>\n",
+       "      <td>0.112570</td>\n",
+       "      <td>0.041256</td>\n",
+       "      <td>112.733771</td>\n",
        "      <td>3.902072</td>\n",
        "      <td>220623.177946</td>\n",
        "      <td>13502.075331</td>\n",
-       "      <td>112.733771</td>\n",
-       "      <td>21.764747</td>\n",
-       "      <td>0.041256</td>\n",
-       "      <td>250.480764</td>\n",
-       "      <td>0.112570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>21.759845</td>\n",
+       "      <td>250.721146</td>\n",
+       "      <td>0.112481</td>\n",
+       "      <td>0.041282</td>\n",
+       "      <td>113.672458</td>\n",
        "      <td>3.908698</td>\n",
        "      <td>222578.594255</td>\n",
        "      <td>13494.221046</td>\n",
-       "      <td>113.672458</td>\n",
-       "      <td>21.759845</td>\n",
-       "      <td>0.041282</td>\n",
-       "      <td>250.721146</td>\n",
-       "      <td>0.112481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>21.754930</td>\n",
+       "      <td>250.961528</td>\n",
+       "      <td>0.112393</td>\n",
+       "      <td>0.041308</td>\n",
+       "      <td>114.617219</td>\n",
        "      <td>3.915336</td>\n",
        "      <td>224547.263292</td>\n",
        "      <td>13486.353455</td>\n",
-       "      <td>114.617219</td>\n",
-       "      <td>21.754930</td>\n",
-       "      <td>0.041308</td>\n",
-       "      <td>250.961528</td>\n",
-       "      <td>0.112393</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   molar enthalpy liquid       pressure  density liquid  density vapor  \\\n",
-       "0               3.888854  216751.867612    13517.744128     110.874504   \n",
-       "1               3.895457  218680.955365    13509.916346     111.801129   \n",
-       "2               3.902072  220623.177946    13502.075331     112.733771   \n",
-       "3               3.908698  222578.594255    13494.221046     113.672458   \n",
-       "4               3.915336  224547.263292    13486.353455     114.617219   \n",
+       "   molar enthalpy vapor  temperature  molar entropy vapor  \\\n",
+       "0             21.774512   250.000000             0.112747   \n",
+       "1             21.769636   250.240382             0.112659   \n",
+       "2             21.764747   250.480764             0.112570   \n",
+       "3             21.759845   250.721146             0.112481   \n",
+       "4             21.754930   250.961528             0.112393   \n",
        "\n",
-       "   molar enthalpy vapor  molar entropy liquid  temperature  \\\n",
-       "0             21.774512              0.041205   250.000000   \n",
-       "1             21.769636              0.041231   250.240382   \n",
-       "2             21.764747              0.041256   250.480764   \n",
-       "3             21.759845              0.041282   250.721146   \n",
-       "4             21.754930              0.041308   250.961528   \n",
+       "   molar entropy liquid  density vapor  molar enthalpy liquid       pressure  \\\n",
+       "0              0.041205     110.874504               3.888854  216751.867612   \n",
+       "1              0.041231     111.801129               3.895457  218680.955365   \n",
+       "2              0.041256     112.733771               3.902072  220623.177946   \n",
+       "3              0.041282     113.672458               3.908698  222578.594255   \n",
+       "4              0.041308     114.617219               3.915336  224547.263292   \n",
        "\n",
-       "   molar entropy vapor  \n",
-       "0             0.112747  \n",
-       "1             0.112659  \n",
-       "2             0.112570  \n",
-       "3             0.112481  \n",
-       "4             0.112393  "
+       "   density liquid  \n",
+       "0    13517.744128  \n",
+       "1    13509.916346  \n",
+       "2    13502.075331  \n",
+       "3    13494.221046  \n",
+       "4    13486.353455  "
       ]
      },
      "execution_count": 19,
@@ -1076,9 +1076,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_69867/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_81996/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
       "  return n * (np.log(v / (v - b * n)) - ak_mix / (b * SQRT2 * 2.0 * state.temperature)\n",
-      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_69867/2221081275.py:66: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_81996/2221081275.py:66: RuntimeWarning: invalid value encountered in log\n",
       "  * np.log((v * (SQRT2 - 1.0) + b * n) / (v * (SQRT2 + 1.0) - b * n)))\n"
      ]
     }
@@ -1205,9 +1205,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_69867/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_81996/2221081275.py:65: RuntimeWarning: invalid value encountered in log\n",
       "  return n * (np.log(v / (v - b * n)) - ak_mix / (b * SQRT2 * 2.0 * state.temperature)\n",
-      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_69867/2221081275.py:66: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/3s/t93ws1md04qdbbq5d1jdz8640000gn/T/ipykernel_81996/2221081275.py:66: RuntimeWarning: invalid value encountered in log\n",
       "  * np.log((v * (SQRT2 - 1.0) + b * n) / (v * (SQRT2 + 1.0) - b * n)))\n"
      ]
     }
@@ -1227,7 +1227,7 @@
      "output_type": "stream",
      "text": [
       "Phase diagram for pure substance\n",
-      "Python implementation is slower by a factor of 17.\n"
+      "Python implementation is slower by a factor of 16.\n"
      ]
     }
    ],
