Renamed python class to UserDefinedEos

--- a/examples/user_defined_eos.ipynb
+++ b/examples/user_defined_eos.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "## Important objects from $\\text{FeO}_\\text{s}$\n",
     "\n",
-    "- `feos_core.user_defined` for classes such as `State`, `PhaseEquilibrium`, and `Python`,\n",
+    "- `feos_core.user_defined` for classes such as `State`, `PhaseEquilibrium`, and `UserDefinedEos`,\n",
     "- `feos_core.si` for SI numbers,\n",
     "- `numpy` for multidimensional arrays,\n",
     "- `pandas` for storing data in data frames,\n",
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from feos_core.python import *\n",
+    "from feos_core.user_defined import *\n",
     "from feos_core import *\n",
     "from feos_core.si import *\n",
     "import numpy as np\n",
@@ -197,7 +197,7 @@
     "## Computing properties\n",
     "\n",
     "Let's compute some properties. First, we have to instantiate the class and register it to Rust.\n",
-    "This is done using the `Python` class."
+    "This is done using the `UserDefinedEos` class."
    ]
   },
   {
@@ -213,7 +213,7 @@
     "molar_weight = SIArray1(44.0962 * GRAM / MOL)\n",
     "\n",
     "# create an instance of our python class and hand it over to rust\n",
-    "eos = Python(PyPengRobinson(tc, pc, omega, molar_weight))"
+    "eos = UserDefinedEos(PyPengRobinson(tc, pc, omega, molar_weight))"
    ]
   },
   {
@@ -697,97 +697,90 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>density liquid</th>\n",
        "      <th>molar enthalpy vapor</th>\n",
+       "      <th>molar entropy vapor</th>\n",
+       "      <th>density liquid</th>\n",
+       "      <th>density vapor</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>pressure</th>\n",
        "      <th>molar enthalpy liquid</th>\n",
        "      <th>molar entropy liquid</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>molar entropy vapor</th>\n",
-       "      <th>pressure</th>\n",
-       "      <th>density vapor</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>13517.744128</td>\n",
        "      <td>21.774512</td>\n",
+       "      <td>0.112747</td>\n",
+       "      <td>13517.744128</td>\n",
+       "      <td>110.874504</td>\n",
+       "      <td>250.000000</td>\n",
+       "      <td>216751.867612</td>\n",
        "      <td>3.888854</td>\n",
        "      <td>0.041205</td>\n",
-       "      <td>250.000000</td>\n",
-       "      <td>0.112747</td>\n",
-       "      <td>216751.867612</td>\n",
-       "      <td>110.874504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>13509.916346</td>\n",
        "      <td>21.769636</td>\n",
+       "      <td>0.112659</td>\n",
+       "      <td>13509.916346</td>\n",
+       "      <td>111.801129</td>\n",
+       "      <td>250.240382</td>\n",
+       "      <td>218680.955365</td>\n",
        "      <td>3.895457</td>\n",
        "      <td>0.041231</td>\n",
-       "      <td>250.240382</td>\n",
-       "      <td>0.112659</td>\n",
-       "      <td>218680.955365</td>\n",
-       "      <td>111.801129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13502.075331</td>\n",
        "      <td>21.764747</td>\n",
+       "      <td>0.112570</td>\n",
+       "      <td>13502.075331</td>\n",
+       "      <td>112.733771</td>\n",
+       "      <td>250.480764</td>\n",
+       "      <td>220623.177946</td>\n",
        "      <td>3.902072</td>\n",
        "      <td>0.041256</td>\n",
-       "      <td>250.480764</td>\n",
-       "      <td>0.112570</td>\n",
-       "      <td>220623.177946</td>\n",
-       "      <td>112.733771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>13494.221046</td>\n",
        "      <td>21.759845</td>\n",
+       "      <td>0.112481</td>\n",
+       "      <td>13494.221046</td>\n",
+       "      <td>113.672458</td>\n",
+       "      <td>250.721146</td>\n",
+       "      <td>222578.594255</td>\n",
        "      <td>3.908698</td>\n",
        "      <td>0.041282</td>\n",
-       "      <td>250.721146</td>\n",
-       "      <td>0.112481</td>\n",
-       "      <td>222578.594255</td>\n",
-       "      <td>113.672458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13486.353455</td>\n",
        "      <td>21.754930</td>\n",
+       "      <td>0.112393</td>\n",
+       "      <td>13486.353455</td>\n",
+       "      <td>114.617219</td>\n",
+       "      <td>250.961528</td>\n",
+       "      <td>224547.263292</td>\n",
        "      <td>3.915336</td>\n",
        "      <td>0.041308</td>\n",
-       "      <td>250.961528</td>\n",
-       "      <td>0.112393</td>\n",
-       "      <td>224547.263292</td>\n",
-       "      <td>114.617219</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   density liquid  molar enthalpy vapor  molar enthalpy liquid  \\\n",
-       "0    13517.744128             21.774512               3.888854   \n",
-       "1    13509.916346             21.769636               3.895457   \n",
-       "2    13502.075331             21.764747               3.902072   \n",
-       "3    13494.221046             21.759845               3.908698   \n",
-       "4    13486.353455             21.754930               3.915336   \n",
+       "   molar enthalpy vapor  molar entropy vapor  density liquid  density vapor  \\\n",
+       "0             21.774512             0.112747    13517.744128     110.874504   \n",
+       "1             21.769636             0.112659    13509.916346     111.801129   \n",
+       "2             21.764747             0.112570    13502.075331     112.733771   \n",
+       "3             21.759845             0.112481    13494.221046     113.672458   \n",
+       "4             21.754930             0.112393    13486.353455     114.617219   \n",
        "\n",
-       "   molar entropy liquid  temperature  molar entropy vapor       pressure  \\\n",
-       "0              0.041205   250.000000             0.112747  216751.867612   \n",
-       "1              0.041231   250.240382             0.112659  218680.955365   \n",
-       "2              0.041256   250.480764             0.112570  220623.177946   \n",
-       "3              0.041282   250.721146             0.112481  222578.594255   \n",
-       "4              0.041308   250.961528             0.112393  224547.263292   \n",
-       "\n",
-       "   density vapor  \n",
-       "0     110.874504  \n",
-       "1     111.801129  \n",
-       "2     112.733771  \n",
-       "3     113.672458  \n",
-       "4     114.617219  "
+       "   temperature       pressure  molar enthalpy liquid  molar entropy liquid  \n",
+       "0   250.000000  216751.867612               3.888854              0.041205  \n",
+       "1   250.240382  218680.955365               3.895457              0.041231  \n",
+       "2   250.480764  220623.177946               3.902072              0.041256  \n",
+       "3   250.721146  222578.594255               3.908698              0.041282  \n",
+       "4   250.961528  224547.263292               3.915336              0.041308  "
       ]
      },
      "execution_count": 19,
@@ -896,7 +889,7 @@
     "omega = np.array([0.153, 0.199])\n",
     "molar_weight = np.array([44.0962, 58.123]) * GRAM / MOL\n",
     "\n",
-    "eos = Python(PyPengRobinson(tc, pc, omega, molar_weight))"
+    "eos = UserDefinedEos(PyPengRobinson(tc, pc, omega, molar_weight))"
    ]
   },
   {
@@ -1105,7 +1098,7 @@
     "pc = SIArray1(4250000.0 * PASCAL)\n",
     "omega = np.array([0.153])\n",
     "molar_weight = SIArray1(44.0962 * GRAM / MOL)\n",
-    "eos_python = Python(PyPengRobinson(tc, pc, omega, molar_weight))"
+    "eos_python = UserDefinedEos(PyPengRobinson(tc, pc, omega, molar_weight))"
    ]
   },
   {
